# jb-project-spark

./: .gitignore  .post-init.py  00-introduction.md  Dockerfile.jupyter  Makefile  README.md  bootstrap.sh  compose.yml  plan-ai_audit.md  plan.md  pyproject.toml  spark-defaults.conf
helpers/: test_utils.py
jobs/: run_etl_job.py
jobs/.ipynb_checkpoints/: run_etl_job-checkpoint.py
notebooks/: 00-exploration.md
pipeline/: config.py  etl.py  migrate.py  reset.py  scheduler.py  serving.py
pipeline/etl/: _01_bronze.py  _02_silver.py  _03_gold.py  _04_serving.py  __init__.py  utils.py
pipeline/migrate/: _01_postgres.py  _02_starrocks.py  _03_minio.py  _04_redis.py  __init__.py
scripts/: init_data.py  post_up.py  producer.py  split_days.py
stages/01-exploration/: lesson.md
stages/02-incremental-ingest/: lesson.md
stages/03-etl-analyst-store/: lesson.md
stages/04-backend-serving/: lesson.md
stages/05-bonus/: lesson.md
tests/: conftest.py  test_stage2_incrementality.py  test_stage3_idempotency.py  test_stage4_latency.py
